sample redis deployment - move to different ns

--- a/clusters/sample-one/shared/dhos-gdm-chart.yaml
+++ b/clusters/sample-one/shared/dhos-gdm-chart.yaml
@@ -1,9 +1,11 @@
 ---
 apiVersion: source.toolkit.fluxcd.io/v1beta2
-kind: HelmRepository
+kind: GitRepository
 metadata:
   name: dhos-gdm
   namespace: flux-system
 spec:
   interval: 2m0s
-  url: https://github.com/huma-engineering/sensyne-app-deployment/tree/HGDM-5-DevOps-Understand-End-to-End-Flow-of-GDM-Cloud-Environment/api/_by_installation
+  url: https://github.com/huma-engineering/sensyne-app-deployment
+  ref:
+    branch: HGDM-5-DevOps-Understand-End-to-End-Flow-of-GDM-Cloud-Environment
