--- a/clusters/sample-one/shared/dhos-medications-api-release.yaml
+++ b/clusters/sample-one/shared/dhos-medications-api-release.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   chart:
     spec:
-      chart: dhos-medications-api
+      chart: api/_by_installation/dhos-medications-api
       sourceRef:
         kind: HelmRepository
         name: dhos-gdm
