--- a/clusters/sample-one/shared/dhos-gdm-chart.yaml
+++ b/clusters/sample-one/shared/dhos-gdm-chart.yaml
@@ -7,5 +7,7 @@ metadata:
 spec:
   interval: 2m0s
   url: https://github.com/huma-engineering/sensyne-app-deployment
+  secretRef:
+    name: git-secret
   ref:
     branch: HGDM-5-DevOps-Understand-End-to-End-Flow-of-GDM-Cloud-Environment
