sample redis deployment - move to different ns

--- a/clusters/sample-one/shared/dhos-medications-api-release.yaml
+++ b/clusters/sample-one/shared/dhos-medications-api-release.yaml
@@ -9,7 +9,7 @@ spec:
     spec:
       chart: api/_by_installation/dhos-medications-api
       sourceRef:
-        kind: HelmRepository
+        kind: GitRepository
         name: dhos-gdm
   interval: 1m0s
   targetNamespace: dhos-medications-api
