--- a/clusters/sample-one/shared/dhos-gdm-chart.yaml
+++ b/clusters/sample-one/shared/dhos-gdm-chart.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 1m30s
-  url: https://github.com/huma-engineering/sensyne-app-deployment
+  url: https://github.com/huma-engineering/sensyne-app-deployment.git
   secretRef:
     name: gh-secret
   ref:
