sample redis deployment - move to different ns

--- a/clusters/sample-one/shared/dhos-gdm-chart.yaml
+++ b/clusters/sample-one/shared/dhos-gdm-chart.yaml
@@ -6,6 +6,6 @@ metadata:
   namespace: flux-system
 spec:
   interval: 1m30s
-  url: https://github.com/huma-engineering/sensyne-app-deployment/blob/HGDM-5-DevOps-Understand-End-to-End-Flow-of-GDM-Cloud-Environment/charts_to_publish
+  url: https://raw.githubusercontent.com/huma-engineering/sensyne-app-deployment/HGDM-5-DevOps-Understand-End-to-End-Flow-of-GDM-Cloud-Environment/charts_to_publish/
   secretRef:
     name: gh-secret
