HGDM-5 workflow for helm packaging

--- a/clusters/sample-one/shared/dhos-medications-api-release.yaml
+++ b/clusters/sample-one/shared/dhos-medications-api-release.yaml
@@ -8,6 +8,10 @@ spec:
   chart:
     spec:
       chart: dhos-medications-api
+      values:
+        global:
+          image:
+            registry: humagdmacr.azurecr.io
       sourceRef:
         kind: HelmRepository
         name: dhos-gdm
