HGDM-5 workflow for helm packaging

--- a/clusters/sample-one/shared/dhos-medications-api-release.yaml
+++ b/clusters/sample-one/shared/dhos-medications-api-release.yaml
@@ -15,6 +15,7 @@ spec:
     global:
       image:
         registry: humagdmacr.azurecr.io
+      image_tag: dev
   interval: 1m0s
   targetNamespace: dhos-medications-api
   install:
