--- a/clusters/sample-one/shared/dhos-medications-api-release.yaml
+++ b/clusters/sample-one/shared/dhos-medications-api-release.yaml
@@ -16,6 +16,9 @@ spec:
       image:
         registry: humagdmacr.azurecr.io
       image_tag: dev
+      db_host: xg-uk-nonprod2-01-cluster-db.postgres.database.azure.com
+      db_password: test
+      db_user_name: postgres
   interval: 1m0s
   targetNamespace: dhos-medications-api
   install:
