--- a/clusters/xg-uk-dev-01-cluster/infra/kube-prometheus-release.yaml
+++ b/clusters/xg-uk-dev-01-cluster/infra/kube-prometheus-release.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   chart:
     spec:
-      chart: prometheus-community/kube-prometheus-stack
+      chart: kube-prometheus-stack
       sourceRef:
         kind: HelmRepository
         name: kube-prometheus
