sample redis deployment - move to different ns

--- a/clusters/xg-uk-dev-01-cluster/shared/dhos-medications-api-release.yaml
+++ b/clusters/xg-uk-dev-01-cluster/shared/dhos-medications-api-release.yaml
@@ -16,7 +16,7 @@ spec:
       image:
         registry: humagdmacr.azurecr.io
       image_tag: dev
-      db_host: xg-uk-nonprod2-01-cluster-db.postgres.database.azure.com
+      db_host: xg-uk-dev-01-cluster-db.postgres.database.azure.com
       db_password: test
       db_user_name: postgres
       log_level: DEBUG
