--- a/clusters/xg-uk-dev-01-cluster/shared/values-cm.yaml
+++ b/clusters/xg-uk-dev-01-cluster/shared/values-cm.yaml
@@ -11,4 +11,4 @@ data:
       db_host: xg-uk-dev-01-cluster-db.postgres.database.azure.com
       db_password: test
       db_user_name: postgres
-      log_level: DEBUG
+      log_level: INFO
