--- a/clusters/xg-uk-dev-01-cluster/shared/values-cm.yaml
+++ b/clusters/xg-uk-dev-01-cluster/shared/values-cm.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: values-cm
+  namespace: dhos-medications-api
 data:
   values.yaml: |
     global:
