--- a/clusters/xg-uk-dev-01-cluster/shared/kustomization.yaml
+++ b/clusters/xg-uk-dev-01-cluster/shared/kustomization.yaml
@@ -1,6 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: flux-system
+resources:
+  - dhos-gdm-chart.yaml
+  - dhos-medications-api-release.yaml
 
 configMapGenerator:
   - name: values-cm
