--- a/clusters/xg-uk-dev-01-cluster/shared/kustomization.yaml
+++ b/clusters/xg-uk-dev-01-cluster/shared/kustomization.yaml
@@ -5,6 +5,9 @@ resources:
   - dhos-gdm-chart.yaml
   - dhos-medications-api-release.yaml
 
+generatorOptions:
+  disableNameSuffixHash: true
+
 configMapGenerator:
   - name: values-cm
     files:
