sample redis deployment - move to different ns

--- a/clusters/xg-uk-dev-01-cluster/shared/kustomization.yaml
+++ b/clusters/xg-uk-dev-01-cluster/shared/kustomization.yaml
@@ -4,6 +4,7 @@ namespace: flux-system
 resources:
   - dhos-gdm-chart.yaml
   - dhos-medications-api-release.yaml
+  - dhos-reporting-api-release.yaml
 
 generatorOptions:
   disableNameSuffixHash: true
